--- a/scss/_user-card.scss
+++ b/scss/_user-card.scss
@@ -2,18 +2,31 @@
 	background-color: $Dark-blue;
 	max-width: 20rem;
 
+	@include mq($medium) {
+		max-width: 16rem;
+	}
+
 	&__user {
 		background-color: $Blue;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 2rem;
+		padding: 2.2rem;
+		@include mq($medium) {
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 2.5rem;
+			padding-bottom: 5rem;
+		}
 	}
 
 	&__img {
 		border-radius: 50%;
 		border: 3px solid white;
 		height: 4rem;
+		@include mq($medium) {
+			height: 5.3rem;
+		}
 	}
 	&__text {
 		color: $Pale-Blue;
@@ -23,12 +36,19 @@
 		color: white;
 		font-weight: 300;
 		font-size: 1.5rem;
+		@include mq($medium) {
+			font-size: 2.5rem;
+		}
 	}
 	&__interval-picker {
 		color: $Desaturated-blue;
-		padding: 22px;
+		padding: 1.375rem 2.2rem;
 		display: flex;
 		justify-content: space-between;
+		@include mq($medium) {
+			flex-direction: column;
+			gap: 1.5rem;
+		}
 		input[type='radio'] {
 			opacity: 0;
 			position: fixed;
